--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <div class="collapse navbar-collapse fixham" id="navbarsExample04">
                            <ul class="navbar-nav mr-auto">
                               <li class="nav-item active">
-                                 <a class="nav-link" href="about.html"> Home </a>
+                                 <a class="nav-link" href="/"> Home </a>
                               </li>
                               <li class="nav-item ">
                                  <a class="nav-link" href="services.html"> Services </a>
