--- a/pricing.html
+++ b/pricing.html
@@ -69,7 +69,7 @@
                            <div class="collapse navbar-collapse" id="navbarsExample04">
                               <ul class="navbar-nav mr-auto">
                                  <li class="nav-item ">
-                                    <a class="nav-link" href="/"> Home </a>
+                                    <a class="nav-link" href="https://codewithhamza1.github.io/webdev.com/"> Home </a>
                                  </li>
                                  <li class="nav-item ">
                                     <a class="nav-link" href="services.html"> Services </a>
