--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <div class="collapse navbar-collapse fixham" id="navbarsExample04">
                            <ul class="navbar-nav mr-auto">
                               <li class="nav-item active">
-                                 <a class="nav-link" href="https://codewithhamza1.github.io/webdev.com/"> Home </a>
+                                 <a class="nav-link" href="/"> Home </a>
                               </li>
                               <li class="nav-item ">
                                  <a class="nav-link" href="services.html"> Services </a>
@@ -116,34 +116,47 @@
                </div>
             </div>
          </div>
-         <div class="carousel-item">
-            <img class="second-slide" src="images/banner.jpg" alt="Second slide">
+         <div class="carousel-item img2">
+            <img class="second-slide " src="images/banner2.jpg" alt="Second slide">
             <div class="container">
                <div class="carousel-caption relative">
-                  <h1> <span> Responsive</span> Landing Pages</h1>
+                  <h1 class="text-black"> <span text-white> Responsive</span> Landing Pages</h1>
                   <a href="#contact" class="rubber">Contact Us</a>
                </div>
             </div>
          </div>
-         <div class="carousel-item">
-            <img class="third-slide" src="images/banner.jpg" alt="Third slide">
+         <div class="carousel-item img2">
+            <img class="third-slide " src="images/banner3.jpg" alt="Third slide">
             <div class="container">
                <div class="carousel-caption relative">
-                  <h1> <span>SEO</span> Friendly</h1>
+                  <h1 class="text-white"> <span>SEO</span> Friendly</h1>
                   <a href="#contact" class="rubber">Contact Us</a>
                </div>
             </div>
          </div>
-         <div class="carousel-item">
-            <img class="third-slide" src="images/banner.jpg" alt="four slide">
+         <div class="carousel-item img2">
+            <img class="third-slide " src="images/banner4.jpg" alt="four slide">
             <div class="container">
                <div class="carousel-caption relative">
-                  <h1> <span> Google & Console</span> Ranked</h1>
+                  <h1 class="text-white"> <span> Google & Console</span> Ranked</h1>
                   <a href="#contact" class="rubber">Contact Us</a>
                </div>
             </div>
          </div>
-        
+        <style>
+         .text-white{
+            color: whitesmoke!important;
+         }
+         .text-black{
+            color: darkorange!important;
+         }
+         .img2{
+            height: 90vh;
+         }
+         .img2{
+            background: linear-gradient(rgba(241, 0, 0, 0.5),rgba(216, 35, 35, 0.6))!important;
+         }
+        </style>
             </div>
          </div>
       </div>
