--- a/index.html
+++ b/index.html
@@ -324,6 +324,8 @@
          </div>
       </div>
    </footer>
+<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-512f5a9e-06fd-4508-ac5c-dfe8bd935ae5"></div>
    <!-- end footer -->
    <!-- Javascript files-->
    <script src="js/jquery.min.js"></script>
