--- a/pricing.html
+++ b/pricing.html
@@ -123,7 +123,7 @@
                    <h4 class="my-0 fw-normal">Free</h4>
                  </div>
                  <div class="card-body">
-                   <h1 class="card-title pricing-card-title">$7<small class="text-muted fw-light"></small></h1>
+                   <h1 class="card-title pricing-card-title">$7/year<small class="text-muted fw-light"></small></h1>
                    <ul class="list-unstyled mt-3 mb-4">
                      <li>HTML5 + CSS included</li>
                      <li>2 GB of storage</li>
@@ -131,8 +131,9 @@
                      <li>Whatsapp Support</li>
                      <li>Help center access</li>
                      <li>Compactable within only few browsers</li>
+                      <li>Free Hosting</li>
                    </ul>
-                   <button type="button" class="w-100 btn btn-lg btn-outline-primary rubber">Sign up for free</button>
+                   <button id="whatsappa" type="button" class="w-100 btn btn-lg btn-outline-primary rubber">Order Now!!</button>
                  </div>
                </div>
              </div>
@@ -142,16 +143,16 @@
                    <h4 class="my-0 fw-normal">Pro</h4>
                  </div>
                  <div class="card-body">
-                   <h1 class="card-title pricing-card-title">$15<small class="text-muted fw-light"></small></h1>
+                   <h1 class="card-title pricing-card-title">$15/year<small class="text-muted fw-light"></small></h1>
                    <ul class="list-unstyled mt-3 mb-4">
                      <li>HTML5 + JAVASCRIPT + CSS3</li>
                      <li>10 GB of storage</li>
                      <li>FireBase Authentication System</li>
                      <li>Help center access</li>
+                       <li>Free Hosting</li>
                      <li>15 Reviews</li>
-                     <li>Compactable with all browsers</li>
                    </ul>
-                   <button type="button" class="w-100 btn btn-lg btn-primary rubber">Get started</button>
+                   <button id="whatsappb" type="button" class="w-100 btn btn-lg btn-primary rubber">Buy Now!!</button>
                  </div>
                </div>
              </div>
@@ -161,7 +162,7 @@
                    <h4 class="my-0 fw-normal">Enterprise</h4>
                  </div>
                  <div class="card-body">
-                   <h1 class="card-title pricing-card-title">$30<small class="text-muted fw-light"></small></h1>
+                   <h1 class="card-title pricing-card-title">$30/year<small class="text-muted fw-light"></small></h1>
                    <ul class="list-unstyled mt-3 mb-4">
                      <li>Next.JS + HTML + CSS3</li>
                      <li>20 GB of storage</li>
@@ -169,8 +170,9 @@
                      <li>Help center access</li>
                      <li>Compactable with all browsers</li>
                      <li>Infinity Reviews</li>
+                      <li>Free Hosting</li>
                    </ul>
-                   <button type="button" class="w-100 btn btn-lg btn-primary rubber">Contact us</button>
+                   <button id="whatsappc" type="button" class="w-100 btn btn-lg btn-primary rubber">Contact us</button>
                  </div>
                </div>
              </div>
@@ -238,6 +240,20 @@
       <script src="js/jquery-3.0.0.min.js"></script>
     
       <!-- sidebar -->
+         <script>
+    const btn1 = document.getElementById('whatsappa');
+    const btn2 = document.getElementById('whatsappb');
+    const btn3 = document.getElementById('whatsappc');
+    btn1.addEventListener('click',()=>{
+      window.location.assign('https://wa.me/message/ZV7QEGNNQNR4P1');
+    })
+    btn2.addEventListener('click',()=>{
+      window.location.assign('https://wa.me/message/ZV7QEGNNQNR4P1');
+    })
+    btn3.addEventListener('click',()=>{
+      window.location.assign('https://wa.me/message/ZV7QEGNNQNR4P1');
+    })
+  </script>
       <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
       <script src="js/custom.js"></script>
       <script src="https:cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
