--- a/index.html
+++ b/index.html
@@ -154,9 +154,9 @@
          .img2{
             height: 90vh;
          }
-         .img2{
-            background: linear-gradient(rgba(241, 0, 0, 0.5),rgba(216, 35, 35, 0.6))!important;
-         }
+           .img2 img{
+           background: linear-gradient(rgba(0,0,0,.40), rgba(0,0,0,.60));
+           }
         </style>
             </div>
          </div>
